objects/CPQFieldMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>B2B_Portal_Quote_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>B2B Portal Quote Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B2B_Portal_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>B2B Portal Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B2B_Portal_Set_Up_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>B2B Portal Set-Up Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B2B_Portal_Set_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>B2B Portal Set-Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B2B_Portal_Update_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>B2B Portal Update Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B2B_Portal_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Offering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Configuration_only_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Configuration only Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Configuration_only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Configuration only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Label_Name__c</fullName>
        <label>Field Label Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Section_Name__c</fullName>
        <label>Form Section Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Quote_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal Quote Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Pricing_Only_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Pricing Only Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Pricing_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Pricing Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isESSN_Pull_Through__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if want to display particular field in ESSN pull through option.</inlineHelpText>
        <label>isESSN Pull Through</label>
        <type>Checkbox</type>
    </fields>
    <label>CPQ Field and Type Mapping</label>
</CustomObject>